--- a/forms/pom.xml
+++ b/forms/pom.xml
@@ -20,7 +20,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>no.tornado.fxsample.forms</mainClass>
+                    <mainClass>no.tornado.fxsample.forms.CustomerAppKt</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -66,13 +66,10 @@
 
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/no.tornado/tornadofx -->
         <dependency>
             <groupId>no.tornado</groupId>
             <artifactId>tornadofx</artifactId>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx</artifactId>
@@ -95,5 +92,4 @@
             <artifactId>controlsfx</artifactId>
         </dependency>
     </dependencies>
-
 </project>
